syntax = "proto3";
option csharp_namespace = "DatabaseService_Grpc";

//import "google/protobuf/timestamp.proto";
package DatabaseGRPC;

service GrpcDatabaseProject {
//Project Grud
  rpc GetProject(UserDbInfomation) returns (D_Project);
  rpc AddProject(ProjectUserInfomation) returns (intger);
  rpc EditProject(ProjectUserInfomation) returns (intger);
  rpc RemoveProject(ProjectUserInfomation) returns (intger);

  rpc GetProjects(UserDbInfomation) returns (D_Projects);
  rpc GetDocuments(UserDbInfomation) returns (D_Documents);
// documents
rpc AddDocument(D_Document) returns (intger);
rpc GetDocument(UserDbInfomation) returns (D_Document);
rpc UpdateDocument(D_Document) returns (intger);
rpc RemoveDocument(ProjectUserInfomation) returns (intger);
// RemoteFile
rpc AddRemoteFile(D_RemoteFile) returns (intger);
rpc GetRemoteFile(UserDbInfomation) returns (D_RemoteFile);
rpc UpdateRemoteFile(D_RemoteFile) returns (D_RemoteFile);
rpc RemoveRemoteFile(UserDbInfomation) returns (intger);
rpc GetRemoteFiles(UserDbInfomation) returns (D_RemoteFiles);
// Teacher
rpc CheckAndInsertTeacher(D_Teacher) returns (D_Teacher);
// Subject
rpc AddSubject(D_Subject) returns (intger);
rpc GetSubjects(UserDbInfomation) returns (D_Subjects);
// ProjectTheme
rpc AddProjectTheme(D_ProjectTheme) returns (intger);
rpc GetProjectThemes(UserDbInfomation) returns (D_ProjectThemes);
rpc GetProjectThemesFromSubject(ThemeFromSubject) returns (D_ProjectThemes);
rpc RemoveProjectTheme(ProjectThemeUserInfomation) returns (intger);
rpc AddProjectThemeCoTeacher(ProjectThemeUserInfomation) returns (intger);
}

message ThemeFromSubject{
    UserDbInfomation user = 1;
    D_Subject subject = 2;
}

message UserDbInfomation{
    int32 ID = 1;
    string DbName = 2;     
}

message ProjectUserInfomation{

    UserDbInfomation user=1;
    D_Project project = 2;
}

message ProjectThemeUserInfomation{

    UserDbInfomation user = 1;
    D_ProjectTheme theme = 2;
    string username = 3;
}

message intger{
    int32 number = 1;
}
// Lists
message D_Documents{
    repeated D_Document D_Documents = 1;
}
message D_Projects{
    repeated D_Project D_Project = 1;
}
message D_RemoteFiles{
    repeated D_RemoteFile D_RemoteFile = 1;
}
message D_Subjects{
    repeated D_Subject Subject = 1;
}
message D_ProjectThemes {
    repeated D_ProjectTheme ProjectTheme = 1;
}
// Project
message D_Project{
	int32 id = 1;
    string name = 2;
    bool completed = 3;
    string lastedited = 4;
    string endDate = 5;
    repeated D_Document documents = 6;
    int32 ProjectThemeID = 7;
    bool CloseToDeletion = 8;
}
// document
message D_Document{
        int32 ID = 1;
        int32 projectID = 2;
        string title = 3;
        string type = 4;
        string data = 5;
        float completedCount = 6;
        repeated string completed = 7;
}
// RemoteFile
message D_RemoteFile{
     int32 ID = 1;
     string title = 2;
     string type = 3;
     int32 projectID = 4;
     string path = 5;
}
// Teacher
message D_Teacher{
     int32 ID = 1;
     string Username = 2;
     string School = 3;
}
// Subject
message D_Subject {
    UserDbInfomation user = 1;
    string name = 2;
    int32 ID = 3;
}

// Project Theme
message D_ProjectTheme {
    int32 ID = 1;
    string name = 2;
    string endDate = 3;
    string lastEdited = 4;
    string Teacher = 5;
    int32 subjectID = 6;
    D_Projects projects = 7;
}